--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,10 @@ gradle-app.setting
 # but ignore if you download dependencies differently
 # lib/
 
+# JavaFX SDK (platform-specific, each developer downloads their own)
+lib/javafx-sdk*/
+lib/*javafx*/
+
 # Keep SQL scripts
 # sql/
 
