Track lib/ directory but ignore its contents
- Update .gitignore to ignore lib/* but track lib/.gitkeep
- Add lib/.gitkeep with instructions for required libraries
- Ensures lib/ directory exists when cloned
- Developers download their own platform-specific dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,8 @@ gradle-app.setting
 # Application-specific
 # Ignore all library files (platform-specific dependencies)
 # Each developer must download their own platform-specific versions
-lib/
+lib/*
+!lib/.gitkeep
 
 # Keep SQL scripts
 # sql/
