Fixed A lot of things
-Fixed UI of Login screen
-Fixed UI of Tables, Messages inside Owner Interface
-Owner can upload images of items
-Uploaded images are added to Database for retrieval in customer interface
-Added Discount Selection in Customer Interface
-Added Discount Eligibility for Customer
-Re-added Connectors for the project

--- a/.gitignore
+++ b/.gitignore
@@ -111,10 +111,11 @@ gradle-app.setting
 !gradle-wrapper.properties
 
 # Application-specific
-# Ignore all library files (platform-specific dependencies)
-# Each developer must download their own platform-specific versions
+# Ignore platform-specific libraries (JavaFX), but track platform-independent JARs
 lib/*
 !lib/.gitkeep
+!lib/mysql-connector-j-*.jar
+!lib/itextpdf-*.jar
 
 # Keep SQL scripts
 # sql/
